DOCS 4.8: more fixes

--- a/quick-start/mkdocs.yml
+++ b/quick-start/mkdocs.yml
@@ -5,6 +5,8 @@ site_name: TACTIC Quick Start Documentation
 #theme: mkdocs
 theme:
   name: material
+  favicon: images/favicon.ico
+  logo: images/favicon.ico
   features:
     -tabs
   font:
