--- a/quick-start/mkdocs.yml
+++ b/quick-start/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: TACTIC Quick Start Documentation
-site_url: http://community.southpawtech.com/tactic/link/docs/
+site_url: http://community.southpawtech.com/tactic/community/link/docs/
 
 #theme: readthedocs 
 #theme: cinder
